--- a/new4.html
+++ b/new4.html
@@ -1,8 +1,35 @@
 ﻿<html>
 <head>
-<title>my first page</title>
+	<title>my first page</title>
 </head>
 	<body>
+	<!-- block -->
+		<p>
+		vvvsvs
+		</P>
+		<p>
+		eff
+		</P>
+		<h1>
+		eqfwfwfwwfw
+		</h1>
+	<!-- inline -->
+		<b>
+		wfwfwfw
+		</b>
+		<b>
+		wfwfwfw
+		</b>
+		<strong>
+		qfqwfwfwfwfqf
+		</strong>
+		<i>
+		fsfsfs
+		</i>
+		<U>
+		gewg
+		</u>
+		
 	
-</body>
+	</body>
 </html>
