--- a/new4.html
+++ b/new4.html
@@ -3,32 +3,9 @@
 	<title>my first page</title>
 </head>
 	<body>
-	<!-- block -->
-		<p>
-		vvvsvs
-		</P>
-		<p>
-		eff
-		</P>
-		<h1>
-		eqfwfwfwwfw
-		</h1>
-	<!-- inline -->
-		<b>
-		wfwfwfw
-		</b>
-		<b>
-		wfwfwfw
-		</b>
-		<strong>
-		qfqwfwfwfwfqf
-		</strong>
-		<i>
-		fsfsfs
-		</i>
-		<U>
-		gewg
-		</u>
+	<iframe width="640" height="360" 
+	src="https://www.youtube.com/embed/TD4h9Fdn3-o" frameborder="0" allowfullscreen></iframe>
+	
 		
 	
 	</body>
