--- a/new4.html
+++ b/new4.html
@@ -3,8 +3,18 @@
 	<title>my first page</title>
 </head>
 	<body>
-	<iframe width="640" height="360" 
-	src="https://www.youtube.com/embed/TD4h9Fdn3-o" frameborder="0" allowfullscreen></iframe>
+	<form action=#>
+		<input name=></input>
+		<br/>
+		<input type=password>
+		<button>login</button>
+		<br/>
+		<input type=checkbox> Remember me
+		<a href=http://htmlbook.ru/html/a >
+		forgot password
+		</a>
+	</form>
+		
 	
 		
 	
