--- a/first/firsthtml.html
+++ b/first/firsthtml.html
@@ -33,19 +33,53 @@
                 
                 </ul>
         </div>
-        <div class=vkcom1>
-            <ul>
+        <div class=nav>
+            <ul class=lev_menu>
                 <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-                <li><a href="#">Моя страница</a></li>
-            </ul>
+                <li><a href="#">Мои друзья</a></li>
+                <li><a href="#">Мои фотографии</a></li>
+                <li><a href="#">Мои видеозаписи</a></li>
+                <li><a href="#">Мои адиозаписи</a></li>
+                <li><a href="#">Мои сообщения</a></li>
+                <li><a href="#">Мои группы</a></li>
+                <li><a href="#">Мои новости</a></li>
+                <li><a href="#">Мои ответы</a></li>
+                <li><a href="#">Мои настройки</a></li>
+                <div class="polosa"></div>
+                <li><a href="#">Приложения</a></li>
+                <li><a href="#">Документы</a></li>
+                <div class="polosa"></div>
+                <li><a href="#">Флиртомания</a></li>
+                <li><a href="#">Копай</a></li>
+                <li><a href="#">Тепляндия</a></li>
+                <li><a href="#">Пьяный Бармен</a></li>
+             </ul>
+        </div>
+        <div class=content>
+          <div id="name">
+              <p>Дима Ризаев</p>
+              <div class=sosto9nie>
+                  <p>Online</p>
+              </div>
+          </div>
+               <div class="content2">
+                   <div id="menu">
+                        <div class="photo">
+                            <img src="3.jpg" alt="">
+                        </div>
+                        <div class=red_str>
+                        <a href="#">Редактировать страницу</a>
+                        </div>
+                        <div class="polosa2"> </div>
+                        <div class="so_mnoi">
+                            <ul>
+                                <li><a href="#">Фотографии со мной</a></li>
+                                <li><a href="#">Видеозаписи со мной</a></li>
+                                <li><a href="#">Мои подписчики</a></li>
+                            </ul>
+                        </div>
+                    </div>
+               </div>
         </div>
         
 
